--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>document</title>
 </head>
 <body>
 
@@ -36,15 +36,57 @@
     </div>
     <div class="con-tendina">
       <p>Prodotti</p>
+      <div class="tendina">
+        <ul>
+          <li>Trasferimenti di denaro</li>
+          <li>Salvadanaio</li>
+          <li>gestione budget</li>
+          <li>Perk</li>
+          <li>criptovaluta</li>
+          <li>assicurazione smartphone</li>
+          <li>assicurazione medica internazionale</li>
+          <li>api di open banking</li>
+          <li>apple pay</li>
+          <li>donazioni</li>
+        </ul>
+      </div>
     </div>
     <div class="con-tendina">
       <p>Azienda</p>
+      <div class="tendina">
+        <ul>
+          <li>chi siamo</li>
+          <li>blog</li>
+          <li>lavora con noi</li>
+          <li>affiliati</li>
+          <li>influencers</li>
+          <li>contatto</li>
+        </ul>
+      </div>
     </div>
     <div class="con-tendina">
       <p>Aiuto</p>
+      <div class="tendina">
+        <ul>
+          <li>community</li>
+          <li>centro assistenza</li>
+          <li>security</li>
+          <li>stato di sistema</li>
+        </ul>
+      </div>
     </div>
-    <div class="lingua">
-      <p>IT</p>
+    <div class="con-tendina">
+      <p>IT
+      <i class="fas fa-chevron-down"></i>
+      <i class="fas fa-chevron-up"></i>
+      </p>
+
+      <div class="tendina">
+        <ul>
+          <li>ITALIANO</li>
+          <li>INGLESE</li>
+        </ul>
+      </div>
     </div>
     <div class="app">
       <a href="#" class="button">Scarica l'app</a>
